...
                      name: _userController.text,
                      password: _passwordController.text));
                  Navigator.pushNamed(context, 'entryPoint');
                }
              }
            },
            child: const Text('Acceder')),
      ),
    );
  }

  Widget _buildBackground(Size screenSize) {
    //background circles
...
